# flask-with-authorization-and-other-pies

./: README.md  app.py  config.py  pyproject.toml  run.py
apps/: __init__.py
apps/activities/: controler.py  forms.py  models.py  views.py
apps/activities/templates/: activities.html  base_activities.html
apps/auth/: controler.py  forms.py  models.py  userlogin.py  views.py
apps/auth/static/: custom.css
apps/auth/templates/: auth.html  base.html  registration.html
core/: __init__.py  core.py  database.py
migrations/: 1712944072_первая_ревизия.py  1712992932_добавление_моделей_активность_работа.py
